--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Build-One-Page-Site/css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
     <!-- NAV -->
-    <nav>
-        <div class="block_element">
+    <div class="nav">
+       <div class="block_element">
           <a href="https://google.com"><div class="inline-block">Nav Item 1</div></a>
           <a href="https://google.com"><div class="inline-block">Nav Item 2</div></a>
           <a href="https://google.com"><div class="inline-block">Nav Item 3</div></a>
-        </div>
-      </nav>
+       </div>
+    </div>
     <!-- MIDDLE BODY - FLOAT -->
-      <section>
-
+      <div class="parent">
         <div class="left">
             <div class="upper">
-                <img src="/Build-One-Page-Site/images/IMG_2696.jpg" class="circle">
+                <img src="/images/IMG_2696.jpg" class="circle">
                <h1>My Backyard</h1>
             </div>
             <div class="lower">
@@ -38,16 +37,16 @@
 
         <div class="right">
            <h1>Flowers are in Bloom</h1> 
-           <img src="/Build-One-Page-Site/images/IMG_2693.jpg" class="rectangle">
+           <img src="/images/IMG_2693.jpg" class="rectangle">
            <p>Backyard gardening in Minnesota presents unique challenges and opportunities due to its diverse climate, with cold winters and warm summers. Tilling the soil in early spring helps prepare the garden beds by loosening the soil and mixing in organic matter, promoting healthy root growth for plants. For a vibrant and colorful garden, consider planting flowers like marigolds, cosmos, zinnias, and black-eyed Susans. These hardy blooms not only thrive in Minnesota's summer conditions but also attract beneficial pollinators, enhancing the beauty and health of your garden.</p>
            <hr class="solid">
            <h1>More to See</h1> 
-           <img src="/Build-One-Page-Site/images/IMG_2643.jpg" class="thirds">
-           <img src="/Build-One-Page-Site/images/IMG_2678.jpg" class="thirds">
-           <img src="/Build-One-Page-Site/images/IMG_2639.jpg" class="thirds">
+           <img src="/images/IMG_2643.jpg" class="thirds">
+           <img src="/images/IMG_2678.jpg" class="thirds">
+           <img src="/images/IMG_2639.jpg" class="thirds">
         </div>
 
-      </section>
+      </div>
     <!-- FOOTER -->
 </body>
 </html>
